@@ -35,6 +35,7 @@
       <li><a href="NuttXNxFlat.html" target="main">NXFLAT</a></li>
       <li><a href="NXGraphicsSubsystem.html" target="main">NX Graphics</a></li>
       <li><a href="NxWidgets.html" target="main">NxWidgets</a></li>
+      <li><a href="NfsHowTo.html" target="main">NFS How-To</a></li>
       <li><a href="NuttXDemandPaging.html" target="main">Demand Paging</a></li>
       <li><a href="UsbTrace.html" target="main">USB Trace</a></li>
       <li><a href="README.html" target="main">README Files</a></li>
